package cn.tunyl.dependenceinversion;

public interface Cpu {
    void run();
}
