package cn.tunyl.dependenceinversion;

public interface HardDisk {
    void save(String data);

    String get();

}
