package cn.tunyl.dependenceinversion;

public interface Memory {
    void save();
}
